--- a/serverless.yml
+++ b/serverless.yml
@@ -1,21 +1,42 @@
 service: rafay-serverless-apollo
+# Create an optimized package for our functions 
+package:
+  individually: true
 
 frameworkVersion: '2'
 
 plugins:
+  - serverless-bundle # Package our functions with Webpack
   - serverless-offline
 provider:
   name: aws
-  runtime: nodejs12.x
+  runtime: nodejs14.x
   lambdaHashingVersion: 20201221
+  deploymentPrefix: RT
+
+custom:
+  #stage: ${opt:stage, self:provider.stage}
+  serverless-offline:
+    httpPort: 4005
+    lambdaPort: 4000
+    noPrependStageInUrl: true
+    useChildProcesses: true
+  bundle:
+#The pg package optionally includes pg-native that needs 
+#to be ignored from Webpack. Use the ignorePackages option to do this.
+    ignorePackages:
+      - pg-native
+    linting: false
+    disableForkTsChecker: true
+    #sourcemaps: false
+    # tsConfig: 'tsconfig.json'
 
 functions:
   graphql:
-    handler: server.action
-    environment:
-      SLS_DEBUG: true
+    handler: graphql.action
     events: 
       - http:
           path: api/v1/employee
           method: post
           cors: true
+          integration: lambda-proxy
